welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if (vaccatio){
    return true
  }else{
    if (weekday){
      return false
    }else{
      return true
    }
  }
}